src/test/ui/issues/issue-72690.stderr
error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:7:5
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^^^^^^^ cannot infer type for struct `String`
   |
   = note: cannot satisfy `String: From<&_>`
   = note: required by `from`

error[E0282]: type annotations needed
  --> $DIR/issue-72690.rs:11:6
   |
LL |     |x| String::from("x".as_ref());
   |      ^ consider giving this closure parameter a type

error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:15:17
   |
LL |     let _ = "x".as_ref();
   |                 ^^^^^^ cannot infer type for type `str`
   |
   = note: cannot satisfy `str: AsRef<_>`

error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:19:5
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^^^^^^^ cannot infer type for struct `String`
   |
   = note: cannot satisfy `String: From<&_>`
   = note: required by `from`

error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:25:5
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^^^^^^^ cannot infer type for struct `String`
   |
   = note: cannot satisfy `String: From<&_>`
   = note: required by `from`

error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:33:5
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^^^^^^^ cannot infer type for struct `String`
   |
   = note: cannot satisfy `String: From<&_>`
   = note: required by `from`

error[E0283]: type annotations needed for `String`
  --> $DIR/issue-72690.rs:41:5
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^^^^^^^ cannot infer type for struct `String`
LL |     let _ = String::from("x");
   |         - consider giving this pattern a type
   |
   = note: cannot satisfy `String: From<&_>`
   = note: required by `from`

error[E0283]: type annotations needed for `String`
  --> $DIR/issue-72690.rs:47:5
   |
LL |     let _ = String::from("x");
   |         - consider giving this pattern a type
LL |     String::from("x".as_ref());
   |     ^^^^^^^^^^^^ cannot infer type for struct `String`
   |
   = note: cannot satisfy `String: From<&_>`
   = note: required by `from`

error[E0283]: type annotations needed for `String`
  --> $DIR/issue-72690.rs:55:5
   |
LL |     let _ = String::from("x");
   |         - consider giving this pattern a type
...
LL |     String::from("x".as_ref());
   |     ^^^^^^^^^^^^ cannot infer type for struct `String`
   |
   = note: cannot satisfy `String: From<&_>`
   = note: required by `from`

error: aborting due to 9 previous errors

Some errors have detailed explanations: E0282, E0283.
For more information about an error, try `rustc --explain E0282`.
